--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-db.host = ${db_host:localhost}
-db.port = ${db_port:5432}
-db.username = ${db_username:postgres}
-db.password = ${db_password:postgres}
-db.dbname = ${db_dbname:course_management}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/course_management
+spring.datasource.username=morad
+spring.datasource.password=
+
 
 # hibernate debug
-spring.jpa.properties.hibernate.show_sql=${jpa_showSql:false}
-spring.jpa.properties.hibernate.use_sql_comments=${jpa_useSqlComments:false}
-spring.jpa.properties.hibernate.format_sql=${jpa_formatSql:false}
-spring.jpa.properties.hibernate.generate_statistics=${jpa_generateStatistics:false}
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.generate_statistics=false
 
 
