--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.generate_statistics=false
+spring.mvc.hiddenmethod.filter.enabled=true
 
 
 
